; ModuleID = '/home/carl/AnghaBench/linux/drivers/tty/extr_n_gsm.c_gsmtty_throttle.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tty/extr_n_gsm.c_gsmtty_throttle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tty_struct = type { %struct.gsm_dlci* }
%struct.gsm_dlci = type { i64, i32, i32 }

@DLCI_CLOSED = common dso_local global i64 0, align 8
@TIOCM_DTR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tty_struct*)* @gsmtty_throttle to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @gsmtty_throttle(%struct.tty_struct* %0) #0 {
  %2 = alloca %struct.tty_struct*, align 8
  %3 = alloca %struct.gsm_dlci*, align 8
  store %struct.tty_struct* %0, %struct.tty_struct** %2, align 8
  %4 = load %struct.tty_struct*, %struct.tty_struct** %2, align 8
  %5 = getelementptr inbounds %struct.tty_struct, %struct.tty_struct* %4, i32 0, i32 0
  %6 = load %struct.gsm_dlci*, %struct.gsm_dlci** %5, align 8
  store %struct.gsm_dlci* %6, %struct.gsm_dlci** %3, align 8
  %7 = load %struct.gsm_dlci*, %struct.gsm_dlci** %3, align 8
  %8 = getelementptr inbounds %struct.gsm_dlci, %struct.gsm_dlci* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = load i64, i64* @DLCI_CLOSED, align 8
  %11 = icmp eq i64 %9, %10
  br i1 %11, label %12, label %13

12:                                               ; preds = %1
  br label %29

13:                                               ; preds = %1
  %14 = load %struct.tty_struct*, %struct.tty_struct** %2, align 8
  %15 = call i64 @C_CRTSCTS(%struct.tty_struct* %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %24

17:                                               ; preds = %13
  %18 = load i32, i32* @TIOCM_DTR, align 4
  %19 = xor i32 %18, -1
  %20 = load %struct.gsm_dlci*, %struct.gsm_dlci** %3, align 8
  %21 = getelementptr inbounds %struct.gsm_dlci, %struct.gsm_dlci* %20, i32 0, i32 2
  %22 = load i32, i32* %21, align 4
  %23 = and i32 %22, %19
  store i32 %23, i32* %21, align 4
  br label %24

24:                                               ; preds = %17, %13
  %25 = load %struct.gsm_dlci*, %struct.gsm_dlci** %3, align 8
  %26 = getelementptr inbounds %struct.gsm_dlci, %struct.gsm_dlci* %25, i32 0, i32 1
  store i32 1, i32* %26, align 8
  %27 = load %struct.gsm_dlci*, %struct.gsm_dlci** %3, align 8
  %28 = call i32 @gsmtty_modem_update(%struct.gsm_dlci* %27, i32 0)
  br label %29

29:                                               ; preds = %24, %12
  ret void
}

declare dso_local i64 @C_CRTSCTS(%struct.tty_struct*) #1

declare dso_local i32 @gsmtty_modem_update(%struct.gsm_dlci*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
